--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="margin: 0px">
     <main>
       <iframe
-        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ_TZ46NFk3BqeFdeJZN76hIdv1fj7VH8ZI3NmWVOgHrFWXZKyOvOraa-pAjchJzHX__1vZ1Pvcw5Fm/pubhtml?gid=1192824455&amp;single=true&amp;widget=true&amp;headers=false"
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ_TZ46NFk3BqeFdeJZN76hIdv1fj7VH8ZI3NmWVOgHrFWXZKyOvOraa-pAjchJzHX__1vZ1Pvcw5Fm/pubhtml?widget=true&amp;headers=false"
         style="display: block; border: none; height: 100vh; width: 100vw;"
       ></iframe>
     </main>
